# learn_rust

./: .gitignore  invent_notes.txt
fts-search/: Cargo.toml
fts-search/src/: boolparser.rs  fts.rs  lib.rs  main.rs
fts-search/tests/: boolparser_test.rs  searchindex_test.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
r-sonic-client/: Cargo.toml
r-sonic-client/src/: lib.rs  macroses.rs  result.rs
r-sonic-client/src/channels/: ingest.rs  mod.rs  search.rs
r-sonic-client/src/commands/: flush.rs  mod.rs  ping.rs  push.rs  quit.rs  start.rs
sonic/: config.cfg
sonic_client/: py_api.py
sonic_client/rust_c/: Cargo.toml
sonic_client/rust_c/data/store/: 000004.sst  IDENTITY  LOG  LOG.old.1614692768534787  LOG.old.1614692963703684  LOG.old.1614693056708520  LOG.old.1614693222298183  MANIFEST-000014  OPTIONS-000014
sonic_client/rust_c/data/store/fst/f09baad9/: b419f8c2.fst
sonic_client/rust_c/data/store/kv/f09baad9/: 000007.sst  IDENTITY  LOG  LOG.old.1614693279357468  LOG.old.1614693369749108  LOG.old.1614693395914267  LOG.old.1614693434958892  LOG.old.1614693519930191  LOG.old.1614693562638880  LOG.old.1614693630418221  LOG.old.1614693680390773  LOG.old.1614866976507262  LOG.old.1616947176349202  LOG.old.1616958543805825  LOG.old.1616960892530682  MANIFEST-000016  MANIFEST-000022  MANIFEST-000025  OPTIONS-000016  (+2 more)
sonic_client/rust_c/src/: main.rs
todo-cli/: Cargo.toml  db.json
todo-cli/src/: main.rs
trie/: trie.py  trie2.py  triehash.py
trie/sum/: another_sum.py
trie/tests/test_node/: test_node.py
trie/tests/test_trie/: test_trie.py
