[package]
name = "fts-search"
version = "0.1.0"
authors = ["Dai <ddao@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.22", features = [ "serialize" ] }
regex = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false